# telelog

./: .gitignore  Cargo.toml  LICENCE  LICENSE  shell.nix
.github/workflows/: release.yml
example/: telelog.toml
src/: config.rs  filter.rs  helpers.rs  journal.rs  main.rs  parser.rs  telegram.rs
