[package]
name = "telelog"
version = "0.1.1"
edition = "2021"

[dependencies]
async-std = "1.12.0"
chrono = "0.4.31"
clap = { version = "4.4.18", features = [ "cargo" ] }
config = "0.13.4"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = {version = "0.11.23", features = ["blocking"]}
secrets = "1.2.0"
serde = "1.0.195"
systemd = "0.10.0"
tokio ={ version = "1.35.1", features = ["full"] }
