[package]
name = "telelog"
version = "0.1.7"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = [ "cargo" ] }
config = "0.13.4"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = "0.11.23"
secrets = "1.2.0"
serde = "1.0.195"
serde_json = "1.0.111"
signal-hook = "0.3.17"
systemd = "0.10.0"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
codegen-units = 2
rpath = false
